--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -32,11 +32,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [  ]
+        language: ['java', 'javascript']
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
         # Learn more about CodeQL language support at https://aka.ms/codeql-docs/language-support
 
     steps:
+    - uses: actions/setup-java@v1
+      with:
+        java-version: 18
+    
     - name: Checkout repository
       uses: actions/checkout@v3
 
