--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,8 @@
 	<description>Backend for Cen3031 Semester Project</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>team-53-cen3031</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
